# temp

./: .clang-format  .clangd  .gitattributes  .gitignore  .gitmodules  Allclean  AllcloneBundles  AllgitBundles  Allreset  Allwmake  README.md  on_odeme_satis_taahhut_protokolu.docx
applications/utilities/mesh/conversion/cgns2foam/: .clang-format  .clang-tidy  .clangd  .config  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  README.md  dependency.py  install.sh
applications/utilities/mesh/conversion/cgns2foam/.bundles/: .boost  .boost.accumulators  .boost.algorithm  .boost.align  .boost.any  .boost.array  .boost.asio  .boost.assert  .boost.assign  .boost.atomic  .boost.auto_index  .boost.bcp  .boost.beast  .boost.bimap  .boost.bind  .boost.boost_install  .boost.boostbook  .boost.boostdep  .boost.boostlook  .boost.build  .boost.callable_traits  .boost.charconv  .boost.check_build  .boost.chrono  .boost.circular_buffer  .boost.cmake  .boost.cobalt  .boost.compat  .boost.compute  .boost.concept_check  .boost.config  .boost.container  .boost.container_hash  .boost.context  .boost.contract  .boost.conversion  .boost.convert  .boost.core  .boost.coroutine  .boost.coroutine2  (+130 more)
applications/utilities/mesh/conversion/cgns2foam/.deps/cgns/: CMakeLists.txt
applications/utilities/mesh/conversion/cgns2foam/.deps/cgns/src/: CMakeLists.txt  cgns_error.c  cgns_f.F90  cgnslib.c
applications/utilities/mesh/conversion/cgns2foam/.deps/cgns/src/cgnstools/: CMakeLists.txt
applications/utilities/mesh/conversion/cgns2foam/.deps/cgns/src/cgnstools/cgnscalc/: CMakeLists.txt  calctcl.c  calcwish.c  cgnscalc.tcl  unitconv.tcl  winmain.c
applications/utilities/mesh/conversion/cgns2foam/.deps/cgns/src/ptests/: CMakeLists.txt
applications/utilities/mesh/conversion/cgns2foam/.deps/cgns/src/tests/: cgwrite_f03.F90
applications/utilities/mesh/conversion/cgns2foam/.deps/cgns/src/tools/: CMakeLists.txt
applications/utilities/mesh/conversion/cgns2foam/.deps/hdf5/: .codespellrc  .gitignore  .h5chkright.ini  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
applications/utilities/mesh/conversion/cgns2foam/.deps/hdf5/.devcontainer/: Dockerfile
applications/utilities/mesh/conversion/cgns2foam/.deps/hdf5/.github/workflows/: README.md  abi-report.yml  aocc-cmake.yml  arm-main-cmake.yml  clang-format-check.yml  clang-format-fix.yml  cmake-analysis.yml  cmake-bintest.yml  cmake-ctest.yml  cmake-par-script.yml  cmake-par-source.yml  cmake-script.yml  cmake.yml  cve.yml  cygwin-cmake.yml  daily-build.yml  daily-schedule.yml  dev-cmake.yml  h5py.yml  hdfeos5.yml  i386-cmake.yml  intel-cmake.yml  linkchecker.yml  main-cmake-par-spc.yml  main-cmake-par.yml  main-cmake-spc.yml  main-cmake.yml  msys2-cmake.yml  netcdf.yml  nvhpc-cmake.yml  publish-release.yml  release-files.yml  scorecard.yml  tarball.yml  vfd-main.yml  vfd-subfiling.yml  vfd.yml  vol_adios2.yml  vol_ext_passthru.yml  vol_rest.yml
applications/utilities/mesh/conversion/cgns2foam/.deps/hdf5/HDF5Examples/: README.md  Using_CMake.txt
applications/utilities/mesh/conversion/cgns2foam/.deps/hdf5/c++/src/: CMakeLists.txt
applications/utilities/mesh/conversion/cgns2foam/.deps/hdf5/config/: H5pubconf.h.in
applications/utilities/mesh/conversion/cgns2foam/.deps/hdf5/config/install/: hdf5-config.cmake.in
applications/utilities/mesh/conversion/cgns2foam/.deps/hdf5/doxygen/: Doxyfile.in  aliases
applications/utilities/mesh/conversion/cgns2foam/.deps/hdf5/doxygen/dox/: FileFormatDisc.dox  FileFormatSpec.dox  HDF5CompressionTroubleshooting.dox  IntroHDF5.dox  LearnBasics3.dox  Specifications.dox  ThreadSafe.dox  UsersGuide.dox  api-compat-macros.dox
applications/utilities/mesh/conversion/cgns2foam/.deps/hdf5/fortran/src/: CMakeLists.txt
applications/utilities/mesh/conversion/cgns2foam/.deps/hdf5/fortran/test/: CMakeLists.txt
applications/utilities/mesh/conversion/cgns2foam/.deps/hdf5/hl/src/: CMakeLists.txt
applications/utilities/mesh/conversion/cgns2foam/.deps/hdf5/hl/test/: CMakeLists.txt
applications/utilities/mesh/conversion/cgns2foam/.deps/hdf5/java/test/: CMakeLists.txt
applications/utilities/mesh/conversion/cgns2foam/.deps/hdf5/release_docs/: AutotoolsToCMakeOptions.md  INSTALL_CMake.txt  INSTALL_Cygwin.txt  RELEASE.txt
applications/utilities/mesh/conversion/cgns2foam/.deps/hdf5/src/: CMakeLists.txt  H5Dchunk.c  H5Dint.c  H5Dmodule.h  H5Dpkg.h  H5FDros3.c  H5FDros3.h  H5FDros3_s3comms.c  H5FDros3_s3comms.h  H5Fmodule.h  H5Fpublic.h
applications/utilities/mesh/conversion/cgns2foam/.deps/hdf5/test/: CMakeLists.txt  dsets.c  ros3.c  s3comms.c
applications/utilities/mesh/conversion/cgns2foam/.deps/hdf5/testpar/: t_subfiling_vfd.c
applications/utilities/mesh/conversion/cgns2foam/.deps/hdf5/tools/lib/: h5tools.c  h5tools_utils.c
applications/utilities/mesh/conversion/cgns2foam/.deps/hdf5/tools/libtest/: h5tools_test_utils.c
applications/utilities/mesh/conversion/cgns2foam/.deps/hdf5/tools/test/: CMakeLists.txt  h5gentest.c
applications/utilities/mesh/conversion/cgns2foam/include/: macro.hpp
applications/utilities/mesh/conversion/cgns2foam/include/cgns/: base.hpp  boundary.hpp  boundary_list.hpp  cell.hpp  element.hpp  error.hpp  face.hpp  node.hpp  source.hpp
applications/utilities/mesh/conversion/cgns2foam/include/openfoam/: source.hpp  writer.hpp
applications/utilities/mesh/conversion/cgns2foam/src/: convert.cpp  list_boundaries.cpp  main.cpp
applications/utilities/mesh/conversion/cgns2foam/tools/: README.md  git.py  os.py  tag.py  version.py
bundles/: hisa.bundle.part01  (+19 more)
(+551 files in other folders)
